# lox-rs

./: Cargo.toml  test.lox
src/: ast.rs  backtrace.rs  fixed_arr.rs  fixed_que.rs  keywords.rs  lib.rs  main.rs  parser.rs  resolver.rs  scanner.rs  side_table.rs  source.rs  source_reference.rs  tree_walk_interpreter.rs  value.rs
src/tree_walk_interpreter/: completion.rs  environment.rs  error.rs  lox_callable.rs  lox_class.rs  lox_function.rs  lox_native_function.rs  lox_object.rs  mod.rs  runtime_value.rs
src/vm_interpreter/: chunk.rs  compiler.rs  disassembler.rs  function.rs  gc.rs  mod.rs  object.rs  object_table.rs  string_interner.rs  value.rs  vm.rs
test_fixtures/: precedence.lox  redefine_panic.lox  unexpected_character.lox
test_fixtures/assignment/: grouping.lox  infix_operator.lox  prefix_operator.lox  to_this.lox  undefined.lox
test_fixtures/call/: bool.lox  nil.lox  num.lox  object.lox  string.lox
test_fixtures/class/: inherit_self.lox  local_inherit_self.lox
test_fixtures/constructor/: call_init_early_return.lox  call_init_explicitly.lox  default.lox  default_arguments.lox  early_return.lox  extra_arguments.lox  missing_arguments.lox  return_in_nested_function.lox  return_value.lox
test_fixtures/field/: call_nonfunction_field.lox  get_on_bool.lox  get_on_class.lox  get_on_function.lox  get_on_nil.lox  get_on_num.lox  get_on_string.lox  set_evaluation_order.lox  set_on_bool.lox  set_on_class.lox  set_on_function.lox  set_on_nil.lox  set_on_num.lox  set_on_string.lox  undefined.lox
test_fixtures/for/: class_in_body.lox  fun_in_body.lox  statement_condition.lox  statement_increment.lox  statement_initializer.lox  var_in_body.lox
test_fixtures/function/: body_must_be_block.lox  extra_arguments.lox  local_mutual_recursion.lox  missing_arguments.lox  missing_comma_in_parameters.lox  print.lox  too_many_arguments.lox  too_many_parameters.lox
test_fixtures/if/: class_in_else.lox  class_in_then.lox  fun_in_else.lox  fun_in_then.lox  var_in_else.lox  var_in_then.lox
tests/: main.rs
(+77 files in other folders)
