[package]
name = "lox-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
itertools = "0.10.3"
lazy_static = "1.4.0"
miette = { version = "4.2.1", features = ["fancy"] }
rustyline = "9.1.2"
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.30"
colored = "2.0.0"
num_enum = "0.5"

[dev-dependencies]
libtest-mimic = "0.3.0"
pretty_assertions = "1.2.0"
regex = "1.5.5"

[[test]]
name = "tests"
path = "tests/main.rs"
harness = false

[profile.release]
# lto = true
debug = true
